--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ header{
 .hero{
     width: 100%;
     height: 100vh;
-    background: url(https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=931&q=80") center no-repeat;
+    background: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&w=1000&q=80") center no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -324,6 +324,20 @@ header{
 .body-btn:focus::before{
     background-color: var(--main-font-color-dark);
 }
+
+/*Taste of Greek Cuisine*/
+.GreekCuisine{
+    background: url("https://static1.squarespace.com/static/56c39efae32140381a07f2bd/56c7617bcf80a1ca9c54b8c5/5c0f5ed7032be447e4386852/1544515863685/Catering-table-spread.jpg?format=1500w") center no-repeat;
+    background-size: cover;
+}
+
+.between{
+    min-height: 65vh;
+    display: flex;
+    align-items: center;
+}
+
+
 
 
 
