--- a/styles.css
+++ b/styles.css
@@ -364,9 +364,96 @@ header{
     color: white;
 }
 
+/*Footer*/
+footer{
+    padding: 7.9rem 0;
+    background-color: rgb(8, 134, 238);
+    color: #fff;
+    text-align: center;
+    position: relative;
+}
 
+.back-to-top{
+    width: 7rem;
+    height: 7rem;
+    background-color: aqua;
+    position: absolute;
+    top: -3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+}
 
+.back-to-top i{
+    display: block;
+    color:#fff;
+    font-size: 2.2rem;
+    padding: 2rem;
+}
 
+.footer-content{
+    
+}
+
+.footer-content h4{
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: 100;
+    letter-spacing: 3px;
+    margin-bottom: 3rem;
+}
+
+.footer-content .asterisk{
+    margin: 2.4rem 0;
+}
+
+.footer-content-about{
+    margin-bottom: 5.4rem;
+}
+
+.footer-content-about p{
+    line-height: 2;
+}
+
+.social-icons{
+    list-style: none;
+    margin-bottom: 5.4rem;
+    display: flex;
+    justify-content: center;
+}
+
+.social-icons i{
+    font-size: 2rem;
+    color: #fff;
+    padding: .8rem 2rem;
+    opacity: .5;
+    transition: color .5s;
+}
+
+.social-icons i:hover,
+.social-icons i:focus{
+    color: var(--secondary-font-color);
+}
+
+.newsletter-form{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.newsletter-input{
+    width: 100%;
+    max-width: 25rem;
+    padding: 1rem;
+    border-radius: .4rem;
+}
+
+.newsletter-btn{
+    background-color: transparent;
+    border: none;
+    color: var
+}
 
 
 
