--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-<<<<<<< Updated upstream
+
 @import url('https://fonts.googleapis.com/css?family=Cabin|Herr+Von+Muellerhoff|Source+Sans+Pro: 400,900&display=swap');
 /*Global styles*/
 *,
@@ -77,10 +77,10 @@ header{
 }
 .menu-toggle{
     color: #fff;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%)
+    transform: translateY(-50%);
     right: 2.5rem;
     cursor: pointer;
     z-index: 1500;
@@ -95,7 +95,7 @@ header{
     position: fixed;
     top: 0;
     left: 0;
-    width: 80%
+    width: 80%;
     height: 100vh;
     background-color: var(--main-font-color-dark);
     padding: 4.5rem;
@@ -103,7 +103,7 @@ header{
     flex-direction: column;
     justify-content: space-around;
     z-index: 1250;
-    /*transform: translateX(-100%);*/
+    transform: translateX(-100%);  
     transition: transform .5s;
 }
 
@@ -143,7 +143,7 @@ header{
     margin: 0 30px;
 }
 
-.nav-item: :last-child{
+.nav-item:last-child{
     margin-right: 0;
 }
 
@@ -1687,7 +1687,7 @@ footer{
 
 .Container{
     width: 1100px;
-    height: 500px;
+    height: 450px;
     background: #ccc;
     margin: 30px auto;
     display: flex;
@@ -1701,6 +1701,10 @@ footer{
     padding: 25px;
     position: relative;
     transition: 0.5s;
+}
+.col p{
+    color: blue;
+    font-size: 20px;
 }
 .col:nth-child(1){
     background: rgb(220, 220, 220);
@@ -1796,6 +1800,8 @@ h2{
     color:aqua;
     margin-top: 0.7rem;
     font-size: 1.4rem;
+    letter-spacing: 1.5px;
+    word-spacing: 2px;
 }
 .Menu-Item:hover .menu-overlay{
     opacity: 1;
@@ -1818,8 +1824,191 @@ h2{
     }
 }
 
+.info{
+    text-align: center;
+    color: red;
+}
+/*About Page*/
+.intro{
+    background: url(https://thealpinesocial.com/wp-content/uploads/2015/03/chef-team.jpg) center no-repeat; 
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.text {
+    margin: 10;
+    margin-top: 5rem;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2vh;
+    background: white;
+}
+.text h1{
+    margin: 0;
+    margin-top: 5%;
+    padding: 0;
+    color: black;
+    font-size: 8em;
+}
+.text h1 span{
+    display: table-cell;
+    margin: 0;
+    padding: 0;
+    animation: animate 2.3s linear infinite;
+}
+.text h1 span:nth-child(1){
+    animation-delay: 0s;
+}
+.text h1 span:nth-child(2){
+    animation-delay: 0.30s;
+}
+.text h1 span:nth-child(3){
+    animation-delay: 0.6s;
+}
+.text h1 span:nth-child(4){
+    animation-delay: 0.9s;
+}
+.text h1 span:nth-child(5){
+    animation-delay: 1.2s;
+}
+.text h1 span:nth-child(6){
+    animation-delay: 1.6s;
+}
+.text h1 span:nth-child(7){
+    animation-delay: 1.9s;
+}
 
+@keyframes animate
+{
+    0%, 100%
+    {
+        color: white;
+        filter: blur(2px);
+        text-shadow: 0 0 10px #003bff,
+                    0 0 20px #003bff,
+                    0 0 40px #003bff,
+                    0 0 80px #003bff,
+                    0 0 120px #003bff,
+                    0 0 200px #003bff,
+                    0 0 300px #003bff,
+                    0 0 400px #003bff;
 
+    }
+    5%, 95%
+    {
+        color: #111;
+        filter: blur(0px);
+        text-shadow: none;
+    }
+}
+.Second{
+    margin: 30px;
+    padding: 0;
+    box-sizing: border-box;
+    height: 200vh;
+}
 
+.Second .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.box-about{
+    position: relative;
+    width: 350px;
+    padding: 40px;
+    background: lightskyblue;
+    box-shadow: 0 5px 15px (rgba(130, 210, 235, 0.1));
+    border-radius: 4px;
+    margin: 20px;
+    overflow: hidden;
+    text-align: center;
+}
 
-
+.box-about:before{
+    content: "";
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(225,255,255, .2);
+    z-index: 1;
+}
+.box-about .icon{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background: #000;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    font-size: 40px;
+    font-weight: 700px;
+    border-radius: 50%;
+    transition: 1s;
+}
+.box-about:nth-child(1) .icon{
+    box-shadow: 0 0 0 0 #e91e63;
+    background: #e91e63;
+}
+.box-about:nth-child(1):hover .icon{
+    box-shadow: 0 0 0 400px #e91e63;
+}
+.box-about:nth-child(2) .icon{
+    box-shadow: 0 0 0 0 #5835f5;
+    background: #5835f5;
+}
+.box-about:nth-child(2):hover .icon{
+    box-shadow: 0 0 0 400px #5835f5;
+}
+.box-about:nth-child(3) .icon{
+    box-shadow: 0 0 0 0 rgb(59, 223, 245);
+    background: rgb(59, 223, 245);
+}
+.box-about:nth-child(3):hover .icon{
+    box-shadow: 0 0 0 400px rgb(59, 223, 245);
+}
+.box-about:nth-child(4) .icon{
+    box-shadow: 0 0 0 0 rgb(239, 25, 247);
+    background: rgb(239, 25, 247);
+}
+.box-about:nth-child(4):hover .icon{
+    box-shadow: 0 0 0 400px rgb(239, 25, 247);
+}
+.box-about .content{
+    position: relative;
+    z-index: 2;
+    transition: .5s;
+    text-align: justify;
+    letter-spacing: 2px;
+}
+.box-about:hover .content{
+    color: #fff;
+}
+.box-about .content h3{
+    font-size: 20px;
+    margin: 20px 0;
+}
+.box-about .content a{
+    display: inline-block;
+    padding: 10px 20px;
+    background: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+    margin-top: 20px;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+}
