--- a/Style/styles.css
+++ b/Style/styles.css
@@ -2110,5 +2110,85 @@ form input[type = submit]:hover{
     }
 }
 
+/*News Page*/
+section{
+    padding: 100px 0;
+    margin-top: 0px;
+    background: rgba(116, 185, 255,0.09);
+    text-align: center;
+}
+.container-news{
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+main{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+    margin: 30px 15px 0px 15px;
+    height: 300px;
+}
+header{
+    width: 80%;
+    margin: 100px;
+    background: transparent;
+}
+header h1{
+    margin: 20px;
+    font-size: 45px;
+    color: rgb(90, 85, 85);
+    font-weight: 400;
+}
+header p{
+    color: black;
+}
+.newsCard{
+    position: relative;
+    overflow: hidden;
+    max-height: 580px;
+    height: 100%;
+    box-sizing: border-box;
+    box-shadow: 0 2px 10px #ccc;
+    transition: all .5s;
+}
+.newsCard:hover{
+    box-shadow: 0 2px 13px rgb(92, 114, 236);
+    transition: all .5s;
+}
+.newsCard:hover img{
+    transform: scale(1.1);
+    transition: all .4s;
+}
+.newsContent{
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    width: 100%;
+    color: rgb(25, 85, 119);
+    padding: 10px 5px;
+    background: linear-gradient(50deg, rgb(209, 217, 247) 0%,rgba(196, 214, 238, 0.4) 100%);
+    transition: all .5s;
+}
+.newsCard:hover .newsContent{
+    bottom: 0;
+    transition: all .5s;
+}
+  
+.newsContent h3{
+    font-size: 20px;
+    font-weight: 500;
+    margin: 0;
+}
+.newsContent h3 span{
+    display: block;
+    font-size: 60%;
+    margin-top: 5px;
+    font-weight: 600;
+    color: rgb(73, 74, 75)
+}
 
-
+.newsCard img{
+    height: 77%;
+    width: 95%;
+}
