--- a/Style/styles.css
+++ b/Style/styles.css
@@ -23,7 +23,6 @@ html{
     font-family: var(--body-font);
     font-size: 10px;
     color: var(--body-font-color);
-    scroll-behavior: smooth;
 }
 
 body{
@@ -77,7 +76,7 @@ nav{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    background: #f11cb2;
+    background: #fa2b7a;
     padding: 0 52px 0 100px;
     align-items: center;
     flex-wrap: wrap;
@@ -107,7 +106,7 @@ nav ul li a{
 }
 nav ul li a.active,
 nav ul li a:hover{
-    color: rgb(252, 88, 230);
+    color: rgb(27, 12, 94);
     background: white
 }
 nav .menu-btn i{
@@ -354,34 +353,6 @@ input[type="checkbox"]{
 }
 
 
-.body-btn{
-    font-size: 1.5rem;
-    color: red;
-    position: relative;
-    transition: color .5s;
-}
-
-.body-btn::before{
-    content:'';
-    position: abosulte;
-    left: 0;
-    bottom: -3px;
-    width: 100%
-    height: 2rem;
-    background-color: 
-    transition: background-color .5s;
-}
-
-.body-btn:hover,
-.body-btn:focus{
-    color: var(--main-font-color-dark);
-}
-
-.body-btn:hover::before,
-.body-btn:focus::before{
-    background-color: var(--main-font-color-dark);
-}
-
 /*Taste Greek Cuisine*/
 .GreekCuisine{
     background: url("https://blueolivegreektaverna.com/wp-content/uploads/2020/05/blue-olive-greek-table-banner.jpg") center no-repeat;
@@ -450,30 +421,22 @@ input[type="checkbox"]{
 
 /*Footer*/
 footer{
-    padding: 7.9rem 0;
-    background-color: rgb(8, 134, 238);
+    padding: 2.9rem 0;
+    background-color: #fa2b7a;
     color: #fff;
     text-align: center;
     position: relative;
 }
 
 .back-to-top{
-    width: 7rem;
-    height: 7rem;
-    background-color: rgb(8, 134, 238);
+    width: 5rem;
+    height: 5rem;
+    background-color: #fa2b7a;
     position: absolute;
     top: -3rem;
     left: 50%;
     transform: translateX(-50%);
     border-radius: 50%;
-}
-
-.back-to-top i{
-    display: block;
-    color:#fff;
-    font-size: 2.2rem;
-    padding: 2rem;
-    animation: up 2s infinite;
 }
 
 .footer-content h4{
@@ -494,6 +457,7 @@ footer{
 
 .footer-content-about p{
     line-height: 2;
+    font-size: 18px;
 }
 
 .social-icons{
@@ -541,6 +505,22 @@ footer{
     top: 50%;
     transform: translateY(-50%);
     margin-left: 10.5rem;
+}
+
+.single-footer ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.single-footer ul a{
+    text-transform: uppercase;
+    color: aqua;
+    font-size: 18px;
+}
+.single-footer h2{
+    font-family: arial;
+    text-transform: uppercase;
+
 }
 
 /*Media Queries*/
@@ -827,572 +807,6 @@ footer{
     margin-bottom: 1.2rem;
     letter-spacing: 3px;
     margin-right: -3px;
-}
-
-.Menu-btn{
-    display: inline-block;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-right: -2px;
-    margin-left: 28rem;
-
-}
-
-.menu-btn{
-    font-size: 1.1rem;
-    background-color: transparent;
-    padding: .9rem 1.8rem;
-    color: var(--body-font-color);
-    border-radius: .5rem;
-    transition: background-color .5s;
-}
-
-.Menu-btn:hover,
-.menu-btn:focus{
-    color: #fff;
-    background-color: rgb(245, 112, 79);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-=======
-@import url('https://fonts.googleapis.com/css?family=Cabin|Herr+Von+Muellerhoff|Source+Sans+Pro: 400,900&display=swap');
-/*Global styles*/
-*,
-*::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/*Variables for fonts*/
-:root{
-    --main-font: 'Source Sans Pro', sans-serif;
-    --secondary-font:'Herr Von Muellerhoff', cursive;
-    --body-font: 'Cabin', sans-serif;
-    --main-font-color-dark: #252525;
-    --secondary-font-color: #2525ff;
-    --body-font-color: #515151;
-}
-
-html{
-    font-family: var(--body-font);
-    font-size: 10px;
-    color: var(--body-font-color);
-    scroll-behavior: smooth;
-}
-
-body{
-    overflow-x: hidden;
-}
-
-section{
-    padding: 3.9rem 0;
-}
-
-.logo image{
-    width: 14vw;
-    height: 15vh;
-}
-    
-
-}
-
-img{
-    width: 100%;
-    max-width: 100%;
-}
-
-a{
-    text-decoration: none;
-}
-
-p{
-    font-size: 1.5rem;
-}
-
-.container{
-    width: 100%;
-    max-width: 122.5rem;
-    margin: 0 auto;
-    padding: 0 2.4rem;
-}
-
-/*header*/
-header{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,.5),transparent);
-}
-
-.nav{
-    height: 7,3rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.menu-toggle{
-    color: #fff;
-    font-size: 2.2rem;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%)
-    right: 2.5rem;
-    cursor: pointer;
-    z-index: 1500;
-}
-
-.fa-times{
-    display: none;
-}
-
-.nav-list{
-    list-style: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 80%
-    height: 100vh;
-    background-color: var(--main-font-color-dark);
-    padding: 4.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    z-index: 1250;
-    /*transform: translateX(-100%);*/
-    transition: transform .5s;
-}
-
-.nav::before{
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0,0,0,.8);
-    z-index: 1000;
-    opacity: 0;
-    transform: scale(0);
-    transition: opacity .5s;
-}
-
-.open .fa-times{
-    display: block;
-}
-
-.open .fa-bars{
-    display: none;
-}
-
-.open .nav-list{
-    transform: translateX(0);
-}
-
-.open .nav::before{
-    opacity: 1;
-    transform: scale(1);
-}
-
-.nav-item{
-    border-bottom: 2px solid rgba(225,255,255, .3);
-    margin: 0 30px;
-}
-
-.nav-item: :last-child{
-    margin-right: 0;
-}
-
-.nav-link{
-    display: block;
-    content: #fff;
-    text-transform: uppercase;
-    font-size: 1.6rem;
-    letter-spacing: 2px;
-    margin-right: -2px;
-    transition: color.5s;
-}
-
-.nav-link:hover{
-    color: var(--secondary-font-color);
-}
-
-/*Hero*/
-.hero{
-    width: 100%;
-    height: 100vh;
-    background: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&w=1000&q=80") center no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.sub-headline{
-    text-align-last: center;
-    font-size: 8.4rem;
-    font-family: var(--secondary-font);
-    color:red;
-    font-weight: 200;
-    line-height: .5;
-    letter-spacing: 2px;
-    opacity: 0;
-    animation: fadeUp .5s forwards;
-    animation-delay: .4s;
-}
-
-.first-letter{
-    text-transform: uppercase;
-    font-size: 10.4rem;
-}
-
-.headline{
-    color: black;
-    text-align: center;
-    font-family: var(--main-font);
-    font-size: 3.8rem;
-    text-transform: uppercase;
-    font-weight: 900;
-    letter-spacing: .5rem;
-    margin-right: -.5rem;
-    animation: scale .5s forwards;
-}
-
-.separator{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.line{
-    width: 100%;
-    max-width: 8.4 rem;
-    height: .25rem;
-    background-color: rgb(231, 59, 59);
-    position: relative;
-    opacity: 0;
-    animation: grow 2s forwards;
-    animation-delay: .9s;
-}
-
-.single-animation{
-    text-align: center;
-}
-
-.line-right::before,
-.line-left::before{
-    content: '';
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    border: .6rem solid transparent;
-    opacity: 0;
-    animation: grow .5s forwards;
-    animation-delay: 1.2s;
-}
-
-.line-right::before{
-    border-right-color: rgb(231, 59, 59);
-    right: 0;
-}
-
-.line-left::before{
-    border-left-color: rgb(231, 59, 59);
-    left: 0;
-}
-
-.asterisk{
-    font-size: 1.2rem;
-    color: black;
-    margin: 0 1.6rem;
-    opacity: 0;
-    animation: spin .5s forwards;
-    animation-delay: .7s;
-}
-
-.single-animation{
-    opacity: 0;
-    animation: fadeUp .5s forwards;
-    animation-delay: 1.5s;
-}
-
-.headline-description h5{
-    color: midnightblue;
-    font-size: 1.4rem;
-    font-weight: 100;
-    text-transform: uppercase;
-    margin-bottom: 1.2rem;
-    letter-spacing: 3px;
-    margin-right: -3px;
-}
-
-.btn{
-    display: inline-block;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-right: -2px;
-
-}
-
-.cta-btn{
-    font-size: 1.1rem;
-    background-color: white;
-    padding: .9rem 1.8rem;
-    color: var(--body-font-color);
-    border-radius: 2rem;
-    transition: background-color .5s;
-}
-
-.cta-btn:hover,
-.cta-btn:focus{
-    color: #fff;
-    background-color: lightcoral;
-}
-
-/*Our Story*/
-.global-headline{
-    text-align: center;
-    margin-top: 3.9rem;
-}
-
-.Our Story .global-headline{
-    margin-top: 6.9rem;
-}
-
-.global-headline .asterisk{
-    color: var(--body-font-color);
-    margin: 2.4rem 0;
-}
-
-.headline-dark{
-    color: var(--main-font-color-dark);
-    letter-spacing: .7rem;
-    margin-right: -.7rem;
-}
-
-.global-headline .sub-headline{
-    letter-spacing: -1px;
-    line-height: .42;
-}
-
-.restaurant-info{
-    text-align: justify;
-}
-
-.restaurant-description{
-    margin-bottom: 3rem;
-}
-
-.restaurant-description p{
-    line-height: 1.6;
-    margin-bottom: 2.4rem;
-    letter-spacing: 3px;
-}
-
-
-.body-btn{
-    font-size: 1.5rem;
-    color: red;
-    position: relative;
-    transition: color .5s;
-}
-
-.body-btn::before{
-    content:'';
-    position: abosulte;
-    left: 0;
-    bottom: -3px;
-    width: 100%
-    height: 2rem;
-    background-color: 
-    transition: background-color .5s;
-}
-
-.body-btn:hover,
-.body-btn:focus{
-    color: var(--main-font-color-dark);
-}
-
-.body-btn:hover::before,
-.body-btn:focus::before{
-    background-color: var(--main-font-color-dark);
-}
-
-/*Taste Greek Cuisine*/
-.GreekCuisine{
-    background: url("https://blueolivegreektaverna.com/wp-content/uploads/2020/05/blue-olive-greek-table-banner.jpg") center no-repeat;
-    background-size: cover;
-    background-position: center center;
-    margin-bottom: 4rem;
-}
-
-.between{
-    min-height: 65vh;
-    display: flex;
-    align-items: center;
-}
-
-.GreekCuisine .sub-headline{
-    position: relative;
-    top: -11rem;
-}
-
-.GreekCuisine .headline{
-    position: relative;
-    top: -10rem;
-    left: 14rem;
-}
-/*Discover our menu*/
-.image-group{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1.5rem;
-}
-
-.discover-our-menu .restaurant-description{
-    padding-top: 3rem;
-    margin-bottom: 0;
-} 
-
-/*Caldera View*/
-.caldera-view{
-    background: url("https://cf.bstatic.com/images/hotel/max1024x768/487/48710024.jpg") center no-repeat;
-    background-size: cover;
-    margin-top: 4rem;
-}
-
-.caldera-view .headline{
-    color: black;
-    position: relative;
-    top: 6.5rem;
-    left: 22rem;
-
-}
-
-.caldera-view .sub-headline{
-    position: relative;
-    bottom: -4.5rem;
-    left: 22rem;
-}
-
-.Gastronomy-Adventure .animate-top{
-    width: 100%;
-    height: 100%;
-}
-
-.Gastronomy-Adventure .asterisk{
-    color: red;
-}
-
-/*Footer*/
-footer{
-    padding: 7.9rem 0;
-    background-color: rgb(8, 134, 238);
-    color: #fff;
-    text-align: center;
-    position: relative;
-}
-
-.back-to-top{
-    width: 7rem;
-    height: 7rem;
-    background-color: rgb(8, 134, 238);
-    position: absolute;
-    top: -3rem;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 50%;
-}
-
-.back-to-top i{
-    display: block;
-    color:#fff;
-    font-size: 2.2rem;
-    padding: 2rem;
-    animation: up 2s infinite;
-}
-
-.footer-content h4{
-    font-size: 2rem;
-    text-transform: uppercase;
-    font-weight: 100;
-    letter-spacing: 3px;
-    margin-bottom: 3rem;
-}
-
-.footer-content .asterisk{
-    margin: 2.4rem 0;
-}
-
-.footer-content-about{
-    margin-bottom: 5.4rem;
-}
-
-.footer-content-about p{
-    line-height: 2;
-}
-
-.social-icons{
-    list-style: none;
-    margin-bottom: 5.4rem;
-    display: flex;
-    justify-content: center;
-}
-
-.social-icons i{
-    font-size: 2rem;
-    color: #fff;
-    padding: .8rem 2rem;
-    opacity: .5;
-    transition: color .5s;
-}
-
-.social-icons i:hover,
-.social-icons i:focus{
-    color: lightcoral;
-}
-
-.newsletter-form{
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-}
-
-.newsletter-input{
-    width: 100%;
-    max-width: 25rem;
-    padding: 1rem;
-    border-radius: .4rem;
-}
-
-.newsletter-btn{
-    background-color: transparent;
-    border: none;
-    color: dodgerblue;
-    cursor: pointer;
-    font-size: 1.6rem;
-    padding: 1px .6rem;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-left: 10.5rem;
 }
 
 /*Media Queries*/
@@ -1846,7 +1260,7 @@ h2{
 
 .info{
     text-align: center;
-    color: red;
+    color: navy;
 }
 
 /*About Page*/
@@ -1929,12 +1343,12 @@ h2{
     }
 }
 .Second{
-    margin: 30px;
+    margin: 70px;
     padding: 0;
     box-sizing: border-box;
+    background: transparent;
     height: 200vh;
 }
-
 .Second .container{
     display: flex;
     align-items: center;
@@ -1943,22 +1357,22 @@ h2{
     width: 100%;
     flex-wrap: wrap;
 }
-.box-about{
+ .box-about{
     position: relative;
     width: 350px;
-    padding: 40px;
-    background: lightskyblue;
+    padding: 2px;
+    background: rgb(151, 217, 248);
     box-shadow: 0 5px 15px (rgba(130, 210, 235, 0.1));
     border-radius: 4px;
     margin: 20px;
+    box-sizing: border-box;
     overflow: hidden;
     text-align: center;
 }
-
-.box-about:before{
+.container .box-about:before{
     content: "";
     width: 50%;
-    height: 100%;
+    height: 60%;
     position: absolute;
     top: 0;
     left: 0;
@@ -1967,14 +1381,14 @@ h2{
 }
 .box-about .icon{
     position: relative;
-    width: 79px;
-    height: 79px;
+    width: 85px;
+    height: 85px;
     background: #000;
     color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10 auto;
+    margin: 20px auto;
     font-size: 40px;
     font-weight: 750px;
     border-radius: 50%;
@@ -2010,7 +1424,7 @@ h2{
 }
 .box-about .content{
     position: relative;
-    z-index: 2;
+    z-index: 1;
     transition: .5s;
     text-align: justify;
     letter-spacing: 2px;
@@ -2019,15 +1433,19 @@ h2{
     color: #fff;
 }
 .box-about .content h3{
-    font-size: 20px;
-    margin: 25px 0;
+    font-size: 25px;
+    margin-top: 240px;
 }
-.box-about .content a{
+.box-about p{
+    margin-top: 25px;
+    font-size: 25px;
+    text-align: center;
+}
+.box-about .content h4{
     display: inline-block;
-    padding: 10px 20px;
+    padding:  20px;
     background: #fff;
-    border-radius: 5px;
-    text-decoration: none;
+    border-radius: 3px;
     color: #000;
     font-weight: 500;
     margin-top: 20px;
@@ -2065,7 +1483,7 @@ h2{
 }
 .card-content h3{
     text-align: center;
-    color: rgb(82, 80, 80);
+    color: rgb(240, 26, 90);
     padding: 26px 0 10px 0;
     font-size: 25px;
     font-weight: 505;
@@ -2088,13 +1506,14 @@ form select, form input{
     border: none;
 }
 form input[type = text], form input[type = number], form input::placeholder, select{
-    color: rgb(248, 74, 176)
+    color: rgb(19, 12, 16)
 }
 form input[type = submit]{
     color: white;
-    background: rgb(80, 120, 252);
-    padding: 13px 0;
-    border-radius: 3.8px;
+    font-size: 15px;
+    background: rgb(252, 80, 117);
+    padding: 5px 0;
+    border-radius: 3px;
     cursor: pointer;
 }
 form input[type = submit]:hover{
@@ -2191,4 +1610,55 @@ header p{
 .newsCard img{
     height: 77%;
     width: 95%;
+}
+
+/*Contact Page*/
+
+.containerContact{
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 35px;
+    border-radius: 5px;
+    background-color: rgb(166, 215, 243);
+}
+.row{
+    display: flex;
+    flex-flow: wrap;
+    margin: 0 -15px;
+
+}
+
+.column{
+    flex: 0 0 90%;
+    padding: 0 15px;
+
+}
+.column.half{
+    flex: 0 0 50%;
+}
+
+input,textarea{
+    width: 100%;
+    padding: 15px 20px;
+    margin: 0 0 30px;
+    font-family: sans-serif;
+    background-color: #fbfbfb;
+    border-radius: 3px;
+    font-size: 16px;
+    border: 0; 
+}
+textarea{
+    height: 150px;
+    resize: none;
+}
+
+input[type="submit"]{
+    display: block;
+    margin: 0 auto;
+    width: 150px;
+    text-align: center;
+    cursor: pointer;
+    background-color: rgb(250, 98, 106);
+    font-size: 18px;
+
 }
